--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1561
-{\fonttbl\f0\fnil\fcharset0 Menlo-Regular;}
-{\colortbl;\red255\green255\blue255;\red83\green104\blue112;\red244\green244\blue244;\red83\green104\blue112;
-\red244\green244\blue244;}
-{\*\expandedcolortbl;;\cssrgb\c39608\c48235\c51373;\cssrgb\c96471\c96471\c96471;\cssrgb\c39608\c48235\c51373;
-\cssrgb\c96471\c96471\c96471;}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\sl340\partightenfactor0
-
-\f0\fs24 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 <!DOCTYPE html>\
-<html>\
-<body>\
-<h1>Hello World</h1>\
-<p>\cf4 \cb5 \outl0\strokewidth0 Hello World\cf2 \cb3 \outl0\strokewidth0 \strokec2 </p>\
-</body>\
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>Hello World</p>
+</body>
 </html>
-\fs26 \
-}
